<resources>
    <string name="app_name">Asumanga</string>

    <!-- General -->
    <string name="home">Home</string>
    <string name="manga">Manga</string>
    <string name="novel">Novel</string>
    <string name="anime">Anime</string>
    <string name="add">Add</string>
    <string name="settings">Settings</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <!-- Titles -->
    <string name="all_manga">All Manga</string>
    <string name="all_novels">All Novels</string>
    <string name="all_anime">All Anime</string>
    <string name="recently_updated">Recently Updated</string>

    <!-- Form Fields -->
    <string name="title">Title</string>
    <string name="type">Type</string>
    <string name="author">Author</string>
    <string name="total_chapters">Total Chapters/Episodes</string>
    <string name="current_chapter">Current Chapter/Episode</string>
    <string name="rating">Rating</string>
    <string name="description_optional">Description (Optional)</string>
    <string name="select_cover_image">Select Cover Image</string>
    <string name="cover_image_placeholder">Cover Image</string>

    <!-- Validation / Toast -->
    <string name="required">Required</string>
    <string name="at_least_1">Must be at least 1</string>
    <string name="at_least_0">Must be at least 0</string>
    <string name="invalid_progress">Invalid progress</string>
    <string name="saved">Saved</string>
    <string name="entry_not_found">Entry not found</string>

    <!-- Options -->
    <string-array name="type_options">
        <item>Anime</item>
        <item>Manga</item>
        <item>Novel</item>
    </string-array>
    <string-array name="rating_options">
        <item>Bad</item>
        <item>Meh</item>
        <item>Good</item>
    </string-array>
    <string-array name="theme_options">
        <item>Follow system</item>
        <item>Light</item>
        <item>Dark</item>
    </string-array>
    <string-array name="language_options">
        <item>System Default</item>
        <item>English</item>
        <item>Spanish</item>
    </string-array>

    <!-- Settings -->
    <string name="appearance">Appearance</string>
    <string name="theme">Theme</string>
    <string name="language">Language</string>
    <string name="follow_system">Follow system</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="english">English</string>
    <string name="spanish">Spanish</string>
    <string name="system_default">System Default</string>

    <!-- UI Labels -->
    <string name="progress">Progress</string>
    <string name="updated">Updated</string>
    <string name="progress_format">%1$d / %2$d</string>
    <string name="rating_with_label">Rating: %1$s</string>
    <string name="bad">Bad</string>
    <string name="meh">Meh</string>
    <string name="good">Good</string>

</resources>
