<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_home"
        android:title="@string/home"
        android:icon="@android:drawable/ic_menu_recent_history" />

    <item
        android:id="@+id/nav_anime"
        android:title="@string/anime"
        android:icon="@android:drawable/ic_menu_edit" />
    <item
        android:id="@+id/nav_manga"
        android:title="@string/manga"
        android:icon="@android:drawable/ic_menu_agenda" />

    <item
        android:id="@+id/nav_novel"
        android:title="@string/novel"
        android:icon="@android:drawable/ic_menu_edit" />


    <item
        android:id="@+id/nav_add"
        android:title="@string/add"
        android:icon="@android:drawable/ic_input_add" />

    <item
        android:id="@+id/nav_settings"
        android:title="@string/settings"
        android:icon="@android:drawable/ic_menu_preferences" />

</menu>
